Fix for bug #28631: Bit index creation failure after alter

Problem: altering a bit field we use Field::is_equal() to check if the bit 
field is changed. Comparing the field type is not enough for bit fields.
Fix: add proper Field_bit::is_equal() that compares the field lengths as well.